# sudoku_solver

./: CMakeLists.txt  CMakePresets.json  README.md  cspell.json  sudoku_solver.sln  vcpkg.json
data/assets/: Puzzles.txt
include/sudoku_solver/: ascii_character.h  common.h  custom_game_screen.h  menu_screen.h  resource.h  resource1.h
src/sudoku_solver/: CMakeLists.txt  ascii_character.cpp  custom_game_screen.cpp  game_screen.cpp  menu_screen.cpp  sudoku.cpp  sudoku_logic.cpp
sudoku_solver/: Display.cpp  Display.h  GameController.cpp  GameController.h  GameLogic.cpp  GameLogic.h  ascii_character.cpp  ascii_character.h  button.cpp  button.h  common.h  custom_game_screen.cpp  custom_game_screen.h  game_screen.cpp  game_screen.h  menu_screen.cpp  menu_screen.h  puzzles.h  screen.h  sudoku.cpp  sudoku_logic.cpp  sudoku_logic.h  sudoku_solver.vcxproj  sudoku_solver.vcxproj.filters  sudoku_solver1.rc
